--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  color:green;
+}
+.parant{
+  display: grid;
+  grid-template-columns:(3,1fr);
+  grid-gap:5px;
+}
+.dear{
+  
+  background-color: rosybrown;
+  padding: 10px;
+  border-radius: 5px;
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    border:2px solid red;
+}
+
+.container{
+  background-color: gray;
+  padding: 10px;
+  border-radius: 5px;
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    border:2px solid green;
+    color:aliceblue;
+} */
